testdata/fixtures/negative/controller-db/controller.go
package controller

import "database/sql"

func Handle(db *sql.DB) error { return db.Ping() }
